# CCSDS123-Issue-2

./: .gitignore  Encoded  Makefile  README.md  main  mygame
ccsds123/SOFTWAREA/: README.md
ccsds123/SOFTWAREA/src/: compressor.c  compressor.h  main.c  (+1 more)
ccsds123issue2/SOFTWARE/: CMakeLists.txt  README.md
ccsds123issue2/SOFTWARE/src/: CMakeLists.txt  main.c
ccsds123issue2/SOFTWARE/src/cliparser/: cli.c
ccsds123issue2/SOFTWARE/src/cliparser/include/: cli.h
ccsds123issue2/SOFTWARE/src/encoder/: hash.c  hybridencoder.c  sampleAdaptive.c  utilities.c
ccsds123issue2/SOFTWARE/src/encoder/include/: codeTables.h  encoder.h  flushTables.h
ccsds123issue2/SOFTWARE/src/predictor/: localdiffrences.c  localsum.c  predictor.c  unpredictor.c  utilities.c  weights.c
ccsds123issue2/SOFTWARE/src/predictor/include/: predictor.h
ccsds123issue2/SOFTWARE/src/utils/: utilities.c
ccsds123issue2/SOFTWARE/src/utils/include/: utilities.h
issue1/: Makefile  README.md
issue1/src/: compressor.c  compressor.h  decompressor.c  main.c
issue2/: Makefile  README.md  RUN_TEST.sh
issue2/src/: main.c
scripts/hashing/: codeTable.c  codeTable.h  codeTable10.c  codeTable11.c  codeTable12.c  codeTable7.c  codeTable8.c  flushTables.h  flushtable15.c  main.c  pdfextract.py  test.csv  test.json  test.py
src/: main.c
src/cliparser/: cli.c
src/encoder/: encoder.c  hash.c  hybridencoder.c  sampleAdaptive.c  utilities.c
src/predictor/: localdiffrences.c  localsum.c  predictor.c  unpredictor.c  utilities.c  weights.c
src/unpredictor/: unpredict.c
src/utils/: utilities.c  utils.c
(+91 files in other folders)
